--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav {
+  padding: 0 10px;
+}
+
+.content {
+  min-height: calc(100vh - 70px - 64px);
+  padding: 10px 0;
+}
+
+.movies {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 10px;
+}
+
+.card__margin_zero {
+  margin: 0;
+}
+
+.btn-small_position {
+  position: absolute;
+  right: 10px;
+}
+
+.filter {
+  display: flex;
+}
+
+.filter p:not(:last-child) {
+  margin-right: 10px;
+}
